# DeviceRemove

./: CMakeLists.txt
DetectingMediaInsertionOrRemoval/: DetectingMediaInsertionOrRemoval.cpp
ProcessingARequestToRemoveADevice/: ProcessingARequestToRemoveADevice.cpp
RemoveDriveByLetter/: RemoveDriveByLetter.cpp  main.cpp
SetDeviceEnabled/: SetDeviceEnabled.cpp
StorageControl/: CMakeLists.txt
StorageControl/src/: Event.h  RaiiWrapper.cpp  RaiiWrapper.h  StorageControl.h  StorageControlWindows.cpp  Str.h  StrWindows.cpp  Thread.h
TestStorageControl/: CMakeLists.txt
TestStorageControl/src/: main.cpp  test.cpp  test.h  usb_games.cpp  usb_games.h
USBitc/: Project1.cpp  Unit2.cpp  Unit2.h
WmDeviceMsg/: main.cpp
WmDeviceMsgMy/: WmDeviceMsgMy.cpp
checkusb/: InputDevices.cpp  InputDevices.h  LinInputDevices.cpp  main.cpp
